tests/analyze/try-mixed-carriers/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `option 'a`, but found `result 'a 'b`.
> 16 | 	try first = safe-head ids  # option int — wrong carrier
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type mismatch: expected `result 'a string`, but found `option 'a`.
> 15 | 	try ids = lookup id     # result (list int) string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
